# local-pyrag

./: .gitignore  README.md  main.py  pyproject.toml
db/: init.sql
docs/: sql-queries.md  test-vector.md
documents/: bigfoot.txt  dangerous-to-vampires.txt  dragons.txt  fictional.txt  guardian.txt  irish-creatures.txt  japanese-creatures.txt  leprechauns.md  loch-ness.txt  vampire-danger.txt  vampire.txt
prompts/: system-prompt.txt
src/pyrag/: chunking.py  cli.py  config.py  embeddings.py  ingest.py  llm.py  query.py
src/pyrag/stores/: __init__.py  base.py  factory.py  postgres.py
