[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-pyrag"
version = "0.1.0"
description = "Local RAG with directory-watched ingestion and a swappable vector store"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "python-dotenv>=1.0",
  "openai>=1.50"
]

[project.scripts]
pyrag = "pyrag.cli:app"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyrag"]